--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
-## generic files to ignore
+#generic files to ignore
 *~
 *.lock
 *.DS_Store
 *.swp
 *.out
 *.log
+/*.txt
+/*.json
 
 #java specific
 *.class
@@ -15,11 +17,12 @@
 *.classpath
 *.project
 
-
+#project ide-lang specific
 project-root-directory/
 build/*
 dist/*
 nbproject/*
+target/*
 
 project-sub-directory/
 /*/src/client/
