--- a/pom.xml
+++ b/pom.xml
@@ -2,13 +2,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>jnet.web.apps</groupId>
-    <artifactId>sample</artifactId>
+    <groupId>com.hello</groupId>
+    <artifactId>helloworld</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>Hello World</name>
-    <url>http://maven.apache.org</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -77,12 +76,14 @@
         </dependency>
         <!-- Even in 2015, Oracle hasn't come up with open repositories. -->
         <!-- mvn install:install-file -Dfile=lib/weblogic-maven-plugin-12.1.1.0.jar -DgroupId=com.oracle.weblogic -DartifactId=weblogic-maven-plugin -Dversion=12.1.1.0 -Dpackaging=jar -->
+        <!--
         <dependency>
             <groupId>com.oracle.weblogic</groupId>
             <artifactId>weblogic-maven-plugin</artifactId>
             <version>12.1.1.0</version>
             <type>jar</type>
         </dependency>
+        -->
         <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
